update QCandidate - before & after planning update Qplanet

--- a/QPlanet/Source/Quintessence.QPlanet.Webshell/Areas/Project/Views/ProjectAssessmentDevelopment/CreateProjectProduct.cshtml
+++ b/QPlanet/Source/Quintessence.QPlanet.Webshell/Areas/Project/Views/ProjectAssessmentDevelopment/CreateProjectProduct.cshtml
@@ -31,8 +31,8 @@
         </div>
 
         <div class="row">
-            <div>Description</div>
-            <div>@Html.TextAreaFor(m => m.Description, 4, 50, null)</div>
+            <div>invoice Remarks</div>
+            <div>@Html.TextAreaFor(m => m.InvoiceRemarks, 4, 50, null)</div>
         </div>
     <br />
     <br />
