--- a/QPlanet/Source/Quintessence.QPlanet.Webshell/Areas/Project/Views/ProjectAssessmentDevelopment/DisplayTemplates/PlannedProjectCandidateCategoryInvoiceModel.cshtml
+++ b/QPlanet/Source/Quintessence.QPlanet.Webshell/Areas/Project/Views/ProjectAssessmentDevelopment/DisplayTemplates/PlannedProjectCandidateCategoryInvoiceModel.cshtml
@@ -13,3 +13,6 @@
         Model.ProjectCandidateProjectCandidateDetailAssessmentStartDate.GetValueOrDefault().ToShortDateString() :
         Model.ScheduledDate.GetValueOrDefault().ToShortDateString())
 </td>
+<td>
+    @Model.InvoiceRemarks
+</td>
