--- a/QPlanet/Source/Quintessence.QPlanet.Webshell/Areas/Project/Views/ProjectAssessmentDevelopment/DisplayTemplates/PlannedProjectCandidateInvoiceModel.cshtml
+++ b/QPlanet/Source/Quintessence.QPlanet.Webshell/Areas/Project/Views/ProjectAssessmentDevelopment/DisplayTemplates/PlannedProjectCandidateInvoiceModel.cshtml
@@ -11,5 +11,6 @@
 <td>
     @(Model.ProjectCandidateDetailAssessmentStartDate.GetValueOrDefault().ToShortDateString())
 </td>
-
-
+<td>
+    @Model.InvoiceRemarks
+</td>
