--- a/QPlanet/Source/Quintessence.QPlanet.Webshell/Areas/Project/Views/ProjectAssessmentDevelopment/ListInvoices.cshtml
+++ b/QPlanet/Source/Quintessence.QPlanet.Webshell/Areas/Project/Views/ProjectAssessmentDevelopment/ListInvoices.cshtml
@@ -14,11 +14,12 @@
                     <thead>
                         <tr>
                             <th style="max-width: 0px;"></th>
-                            <th style="width:20%;">Candidate</th>
-                            <th style="width:20%;">Product</th>
-                            <th style="width:20%;">Start date</th>
-                            <th style="width:20%;">Invoice amount</th>
-                            <th style="width:20%;">Status</th>
+                            <th style="width:16%;">Candidate</th>
+                            <th style="width:16%;">Product</th>
+                            <th style="width:16%;">Start date</th>
+                            <th style="width:16%;">Invoice amount</th>
+                            <th style="width:16%;">Status</th>
+                            <th style="width:20%;">Invoice remarks</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -55,11 +56,12 @@
                     <thead>
                         <tr>
                             <th style="max-width: 0px;"></th>
-                            <th style="width:20%;">Candidate</th>
-                            <th style="width:20%;">Product</th>
-                            <th style="width:20%;">Start date</th>
-                            <th style="width:20%;">Invoice amount</th>
-                            <th style="width:20%;">Status</th>
+                            <th style="width:16%;">Candidate</th>
+                            <th style="width:16%;">Product</th>
+                            <th style="width:16%;">Start date</th>
+                            <th style="width:16%;">Invoice amount</th>
+                            <th style="width:16%;">Status</th>
+                            <th style="width:20%;">Invoice remarks</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -95,11 +97,12 @@
                 <table id="InvoicedDataTable">
                     <thead>
                         <tr>
-                            <th style="width:20%;">Candidate</th>
-                            <th style="width:20%;">Product</th>
-                            <th style="width:20%;">Invoice amount</th>
-                            <th style="width:20%;">Invoiced on</th>
-                            <th style="width:20%;">Invoice number</th>
+                            <th style="width:16%;">Candidate</th>
+                            <th style="width:16%;">Product</th>
+                            <th style="width:16%;">Invoice amount</th>
+                            <th style="width:16%;">Invoiced on</th>
+                            <th style="width:16%;">Invoice number</th>
+                            <th style="width:20%;">Invoice remarks</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -146,11 +149,12 @@
                     <thead>
                         <tr>
                             <th style="max-width: 0px;"></th>
-                            <th style="width:20%;">Candidate</th>
-                            <th style="width:20%;">Product</th>
-                            <th style="width:20%;">Start date</th>
-                            <th style="width:20%;">Invoice amount</th>
-                            <th style="width:20%;">Status</th>
+                            <th style="width:16%;">Candidate</th>
+                            <th style="width:16%;">Product</th>
+                            <th style="width:16%;">Start date</th>
+                            <th style="width:16%;">Invoice amount</th>
+                            <th style="width:16%;">Status</th>
+                            <th style="width:20%;">Invoice remarks</th>
                         </tr>
                     </thead>
                     <tbody>
