--- a/QPlanet/Source/Quintessence.QPlanet.Webshell/Areas/Project/Views/ProjectAssessmentDevelopment/EditProjectProduct.cshtml
+++ b/QPlanet/Source/Quintessence.QPlanet.Webshell/Areas/Project/Views/ProjectAssessmentDevelopment/EditProjectProduct.cshtml
@@ -45,8 +45,8 @@
     </div>
 
     <div class="row">
-        <div>Description</div>
-        <div>@Html.TextAreaFor(m => m.Description, 4, 50, null)</div>
+        <div>Invoice Remarks</div>
+        <div>@Html.TextAreaFor(m => m.InvoiceRemarks, 4, 50, null)</div>
     </div>
 }
 <br />
