--- a/QPlanet/Source/Quintessence.QPlanet.Webshell/Areas/Project/Views/ProjectConsultancy/Edit.cshtml
+++ b/QPlanet/Source/Quintessence.QPlanet.Webshell/Areas/Project/Views/ProjectConsultancy/Edit.cshtml
@@ -18,22 +18,26 @@
     <nav class="action">
         <ul>
             <li class="current">Detail</li>
-            <li>@Html.ActionLink("Project plan", "EditProjectPlan", "ProjectConsultancy", new RouteValueDictionary(new { area = "Project", id = Model.Id }), null)
+            <li>
+                @Html.ActionLink("Project plan", "EditProjectPlan", "ProjectConsultancy", new RouteValueDictionary(new { area = "Project", id = Model.Id }), null)
             </li>
-            <li>@Html.ActionLink("Activity details", "ActivityDetail", "ProjectConsultancy", new RouteValueDictionary(new { area = "Project", id = Model.Id }), null)
+            <li>
+                @Html.ActionLink("Activity details", "ActivityDetail", "ProjectConsultancy", new RouteValueDictionary(new { area = "Project", id = Model.Id }), null)
             </li>
-            <li>@Html.ActionLink("Product details", "ProductDetail", "ProjectConsultancy", new RouteValueDictionary(new { area = "Project", id = Model.Id }), null)
+            <li>
+                @Html.ActionLink("Product details", "ProductDetail", "ProjectConsultancy", new RouteValueDictionary(new { area = "Project", id = Model.Id }), null)
             </li>
 
             @if (Model.Status != ProjectStatusCodeViewType.Draft && Model.PricingModelType == PricingModelType.TimeAndMaterial)
             {
-                <li>@Html.ActionLink("Timesheets", "Timesheet", "ProjectConsultancy", new RouteValueDictionary(new { area = "Project", id = Model.Id }), null)
+                <li>
+                    @Html.ActionLink("Timesheets", "Timesheet", "ProjectConsultancy", new RouteValueDictionary(new { area = "Project", id = Model.Id }), null)
                 </li>
                 @*if (Model.IsCurrentUserProjectManager || Model.IsCurrentUserCustomerAssistant)
-                {
-                <li>@Html.ActionLink("Project timesheets", "ProjectTimesheet", "ProjectConsultancy", new RouteValueDictionary(new { area = "Project", id = Model.Id }), null)
-                </li>
-                }*@
+                    {
+                    <li>@Html.ActionLink("Project timesheets", "ProjectTimesheet", "ProjectConsultancy", new RouteValueDictionary(new { area = "Project", id = Model.Id }), null)
+                    </li>
+                    }*@
             }
         </ul>
     </nav>
@@ -48,7 +52,8 @@
         <li><a href="#ProjectPriceIndex"></a></li>
         @if (Model.PricingModelType == PricingModelType.FixedPrice)
         {
-            <li><a href="#ProjectFixedPrice"></a></li> 
+            <li><a href="#ProjectFixedPrice"></a></li>
+
         }
         <li><a href="#ContactDetails"></a></li>
         <li><a href="#SuperofficeProjects"></a></li>
@@ -59,8 +64,7 @@
 @section AdditionalScripts
 {
     <style>
-        #ActivityProfileTable td.numeric input[type=text]
-        {
+        #ActivityProfileTable td.numeric input[type=text] {
             width: 100px;
         }
     </style>
@@ -69,6 +73,8 @@
     <script src="@Url.Content("~/Scripts/jquery.treeTable.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/jquery.cookie.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/persist.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/jquery.filedrop.js")" type="text/javascript"></script>
+
     <script type="text/javascript">
         $(function () {
             $('#ChangeProjectManagerNameLink').hide();
@@ -330,7 +336,7 @@
             $(this).on('click', 'a[data-function=RemoveCrmProject]', null, function () {
                 if (!confirm('Are you sure you want to detach this TL project from this QPlanet project?'))
                     return;
-                
+
                 ShowDetailSaveDialog();
 
                 var url = '@Url.Action("UnlinkCrmProject", "ProjectGeneral", new { area = "Project" })/@Model.Id/' + $(this).attr('data-id');
@@ -497,7 +503,7 @@
                             }
                         });
                     });
-            
+
             $(this).on('click', 'a[data-function=CopyActivity]', null, function () {
                 ShowDetailSaveDialog();
 
@@ -690,7 +696,7 @@
                     }
                 });
         }
-        
+
         function RefreshProjectInvoiceAmountOverview() {
             $('#ProjectInvoiceAmountOverviewTablePlaceholder').loading('Loading project invoice amount overview...');
             $.ajax({
@@ -1043,13 +1049,40 @@
             }
         });
     </script>
+
+    <script type="text/javascript">
+        $(function () {
+            $('#dropArea').filedrop({
+                url: '@Url.Action("UploadFile", "ProjectConsultancy", new { id = Model.Id })',
+                paramname: 'files',
+                maxfiles: 5,
+                maxfilesize: 5, // in MB
+                dragOver: function () {
+                    $('#dropArea').addClass('active-drop');
+                },
+                dragLeave: function () {
+                    $('#dropArea').removeClass('active-drop');
+                },
+                drop: function () {
+                    $('#dropArea').removeClass('active-drop');
+                },
+                afterAll: function (e) {
+                    $('#dropArea').html('file(s) uploaded successfully');
+                    RefreshDocumentTable();
+                },
+                uploadFinished: function (i, file, response, time) {
+                    $('#uploadList').append('<li class="list-group-item">'+file.name+'</li>')
+                }
+            })
+        })
+    </script>
 }
 <fieldset id="ProjectInformation">
     <legend>Project information</legend>
     @using (Html.BeginForm("Edit", "ProjectConsultancy", FormMethod.Post, new { id = "ProjectForm" }))
     {
         <h4>General information</h4>
-            
+
         @Html.EditorFor(m => m, "BaseEntityViewTemplate")
 
         <div class="container_12 nomargin">
@@ -1067,7 +1100,8 @@
                 <div class="label">@Html.LabelFor(m => m.ProjectTypeName)</div>
             </div>
             <div class="grid_7 table">
-                <div class="value">@Html.DisplayFor(m => m.ProjectTypeName)
+                <div class="value">
+                    @Html.DisplayFor(m => m.ProjectTypeName)
                 </div>
             </div>
             <div class="clear"></div>
@@ -1076,7 +1110,8 @@
                 <div class="label">@Html.LabelFor(m => m.PricingModelId)</div>
             </div>
             <div class="grid_7 table">
-                <div class="value">@Html.DropDownListFor(m => m.PricingModelId, Model.CreatePricingModelSelectListItems(Model.PricingModelId))
+                <div class="value">
+                    @Html.DropDownListFor(m => m.PricingModelId, Model.CreatePricingModelSelectListItems(Model.PricingModelId))
                 </div>
             </div>
             <div class="clear"></div>
@@ -1085,7 +1120,8 @@
                 <div class="label">@Html.LabelFor(m => m.StatusCode)</div>
             </div>
             <div class="grid_7 table">
-                <div class="value">@Html.DropDownListFor(m => m.StatusCode, Model.ProjectStatusses)
+                <div class="value">
+                    @Html.DropDownListFor(m => m.StatusCode, Model.ProjectStatusses)
                 </div>
             </div>
             <div class="clear"></div>
@@ -1102,14 +1138,16 @@
                 <div class="label">@Html.LabelFor(m => m.ProjectManagerFullName)</div>
             </div>
             <div class="grid_7 table">
-                <div class="value">@Html.HiddenFor(m => m.ProjectManagerId)
+                <div class="value">
+                    @Html.HiddenFor(m => m.ProjectManagerId)
                     @Html.TextBoxFor(m => m.ProjectManagerFullName)
                     <a href="javascript:void(0);" id="ChangeProjectManagerNameLink" title="Click on this link to change the Project Manager">
                     </a>
                 </div>
             </div>
             <div class="clear"></div>
-            <div class="prefix_5 grid_7">@Html.ValidationMessageFor(m => m.ProjectManagerFullName)
+            <div class="prefix_5 grid_7">
+                @Html.ValidationMessageFor(m => m.ProjectManagerFullName)
             </div>
             <div class="clear"></div>
 
@@ -1117,14 +1155,16 @@
                 <div class="label">@Html.LabelFor(m => m.CoProjectManagerFullName)</div>
             </div>
             <div class="grid_7 table">
-                <div class="value">@Html.HiddenFor(m => m.CoProjectManagerId)
+                <div class="value">
+                    @Html.HiddenFor(m => m.CoProjectManagerId)
                     @Html.TextBoxFor(m => m.CoProjectManagerFullName)
                     <a href="javascript:void(0);" id="ChangeCoProjectManagerNameLink" title="Click on this link to change the Project Manager">
                     </a>
                 </div>
             </div>
             <div class="clear"></div>
-            <div class="prefix_5 grid_7">@Html.ValidationMessageFor(m => m.CoProjectManagerFullName)
+            <div class="prefix_5 grid_7">
+                @Html.ValidationMessageFor(m => m.CoProjectManagerFullName)
             </div>
             <div class="clear"></div>
 
@@ -1132,14 +1172,16 @@
                 <div class="label">@Html.LabelFor(m => m.CustomerAssistantFullName)</div>
             </div>
             <div class="grid_7 table">
-                <div class="value">@Html.HiddenFor(m => m.CustomerAssistantId)
+                <div class="value">
+                    @Html.HiddenFor(m => m.CustomerAssistantId)
                     @Html.TextBoxFor(m => m.CustomerAssistantFullName)
                     <a href="javascript:void(0);" id="ChangeCustomerAssistantNameLink" title="Click on this link to change the Customer Assistant">
                     </a>
                 </div>
             </div>
             <div class="clear"></div>
-            <div class="prefix_5 grid_7">@Html.ValidationMessageFor(m => m.CustomerAssistantFullName)
+            <div class="prefix_5 grid_7">
+                @Html.ValidationMessageFor(m => m.CustomerAssistantFullName)
             </div>
             <div class="clear"></div>
 
@@ -1147,7 +1189,8 @@
                 <div class="label">@Html.LabelFor(m => m.ProjectInformation)</div>
             </div>
             <div class="grid_7 table">
-                <div class="value">@Html.TextAreaFor(m => m.ProjectInformation)
+                <div class="value">
+                    @Html.TextAreaFor(m => m.ProjectInformation)
                 </div>
             </div>
             <div class="clear"></div>
@@ -1156,7 +1199,8 @@
                 <div class="label">@Html.LabelFor(m => m.DepartmentInformation)</div>
             </div>
             <div class="grid_7 table">
-                <div class="value">@Html.TextAreaFor(m => m.DepartmentInformation)
+                <div class="value">
+                    @Html.TextAreaFor(m => m.DepartmentInformation)
                 </div>
             </div>
             <div class="clear"></div>
@@ -1165,7 +1209,8 @@
                 <div class="label">@Html.LabelFor(m => m.Remarks)</div>
             </div>
             <div class="grid_7 table">
-                <div class="value">@Html.TextAreaFor(m => m.Remarks)
+                <div class="value">
+                    @Html.TextAreaFor(m => m.Remarks)
                 </div>
             </div>
             <div class="clear"></div>
@@ -1266,13 +1311,14 @@
     {
         @Html.EditorFor(m => m, "BaseEntityViewTemplate")
         @Html.EditorFor(m => m.ContactDetail, "BaseEntityViewTemplate")
-            
+
         <div class="container_12 nomargin">
             <div class="grid_5 table">
                 <div class="label">@Html.LabelFor(m => m.ContactDetail.Remarks)</div>
             </div>
             <div class="grid_7 table">
-                <div class="value">@Html.TextAreaFor(m => m.ContactDetail.Remarks)
+                <div class="value">
+                    @Html.TextAreaFor(m => m.ContactDetail.Remarks)
                 </div>
             </div>
             <div class="clear"></div>
@@ -1304,22 +1350,16 @@
 </fieldset>-->
 
 <fieldset id="UploadedDocuments">
-    <legend>Documents</legend>  
+    <legend>Documents</legend>
 
-    @using (Html.BeginForm("UploadFile", "ProjectConsultancy", new { id = Model.Id }, FormMethod.Post, new { enctype = "multipart/form-data" }))
-    {
-        <div id="DocumentTablePlaceholder"></div>
+    <div id="DocumentTablePlaceholder"></div>
 
-        <div class="row">
-            <div id="multiple">
-                <input type="file" class="multiple" name="files" multiple />
-            </div>
-        </div>
-
-        <div class="row">
-            <button class="button">Upload</button>
-        </div>
-    }
+    <div id="dropArea">
+        Drop your files here
+    </div>
+    <p>Uploaded files</p>
+    <ul class="list-group" id="uploadList">
+    </ul>
 </fieldset>
 
 <div id="AddCrmProjectDialog">
