--- a/QPlanet/Source/Quintessence.QPlanet.Webshell/Content/Site.css
+++ b/QPlanet/Source/Quintessence.QPlanet.Webshell/Content/Site.css
@@ -811,3 +811,20 @@ table.dataTable thead th {
     color: #000 !important;
     background-color: #ffeb3b !important
 }
+
+#dropArea {
+    background: lightgrey;
+    border: black dashed 1px;
+    height: 50px;
+    text-align: center;
+    color: #002649;
+    padding-top: 12px;
+    margin-top: 30px;
+}
+
+.active-drop {
+    background: #77bafa !important;
+    border: solid 2px blue !important;
+    opacity: .5;
+    color: black !important;
+}
