--- a/src/Hosts/Quintessence.QCandidate.Web/Views/Shared/_Layout.cshtml
+++ b/src/Hosts/Quintessence.QCandidate.Web/Views/Shared/_Layout.cshtml
@@ -12,6 +12,7 @@
     <link href="~/css/style.css" rel="stylesheet">
     <link href="~/css/materialize.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script src="https://use.fontawesome.com/f94f65f046.js"></script>
     @RenderSection("Styles", required: false)
 </head>
 
@@ -55,9 +56,9 @@
             <nav>
                 <div class="nav-wrapper container">
                     <a href="#" class="brand-logo"><img src="~/img/logo.svg"></a>
-                    <ul class="navigation">
+                    <!--<ul class="navigation">
                         <li>@Localizer["DayPlanning"]</li>
-                    </ul>
+                    </ul>-->
                     <ul class="right user-information">
                         <li>@User.Identity.Name</li>
                         <li><a href="@Url.Action("Logout", "Accounts")" class="btn">@Localizer["LogOut"]</a></li>
@@ -70,12 +71,6 @@
             <footer>
                 <div class="container">
                     <span class="copyright">&copy; 2020 Quintessence</span>
-                    <div class="social-media right">
-                        <a href="https://www.facebook.com/QuintessenceConsulting"><img src="~/img/facebook.svg" /></a>
-                        <a href="https://www.linkedin.com/company/quintessence"><img src="~/img/linkedin.svg" /></a>
-                        <a href="https://twitter.com/Quintessence_Be"><img src="~/img/twitter.svg" /></a>
-                        <a href="https://www.youtube.com/channel/UCWddCvy4ZzV06N7YYAp_qoQ"><img src="~/img/youtube.svg" /></a>
-                    </div>
                 </div>
             </footer>
 
