--- a/src/Hosts/Quintessence.QCandidate.Web/wwwroot/css/style.css
+++ b/src/Hosts/Quintessence.QCandidate.Web/wwwroot/css/style.css
@@ -298,3 +298,59 @@ footer .social-media img {
     color: #fff;
     font-size: 14px;
 }
+
+.memo tr {
+	border: none;
+}
+
+.memo td, th {
+	padding: 1px 5px;
+}
+
+.memo {
+	margin-left: 50px;
+}
+
+.memo h2 {
+	margin-top: 80px;
+}
+
+.memo-avatar {
+	background-color: purple; 
+	font-size: 2.5em; 
+	text-align: center; 
+	border-radius: 50%; 
+	color: white; 
+	padding: 10px 10px 10px 10px;
+}
+
+.memo-content p {
+	margin-top: 35px;
+}
+
+.pp:hover {
+    background-color: #F0F8FF;
+    color: black;
+    font-weight: 500;
+    transition: 0.3s;
+}
+
+.glow {
+    padding: 20px;
+    border: 1px solid rgba(0,0,0,.125);
+    border-image: none;
+    -webkit-transition: all 0.5s ease-out;
+    -moz-transition: all 0.5s ease-out;
+    -o-transition: all 0.5s ease-out;
+    -ms-transition: all 0.5s ease-out;
+    transition: all 0.5s ease-out;
+}
+
+.glow:hover {
+    box-shadow: 0 5px 15px #ff9000;
+    -webkit-transition: 0.4s;
+    -moz-transition: 0.4s;
+    -o-transition: 0.4s;
+    -ms-transition: 0.4s;
+    transition: 0.4s;
+}
